<resources>
    <string name="app_name">UpNext</string>
    <string name="api_key">84deaed532fa4e1eac69286c1f9d1453</string>
    <string name="signup">Sign Up</string>
    <string name="login">Log In</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="app_logo">App Logo</string>
    <string name="textview_signup">Don\'t have an account? Sign up</string>
    <string name="log_in">Log In</string>
    <string name="Login_text_view">Have an account? Log In</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="stay_updated_with_the_latest_news">Stay updated with the latest news!</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="material_button">Material Button</string>
    <string name="like">Like</string>
    <string name="save">Save</string>
    <string name="liked_posts">Liked Posts</string>
    <string name="logout">Logout</string>
    <string name="saved_posts">Saved Posts</string>
    <string name="hi_user">Hi, User</string>
    <string name="user_icon">user icon\n</string>
    <string name="account">Account</string>
    <string name="profile_icon">\nProfile icon\n</string>
    <string name="no_liked_posts_yet">No liked posts yet!</string>
    <string name="delete_account">Delete Account</string>
    <string name="search">search\n</string>
</resources>