<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <item
        android:id="@+id/action_liked_posts"
        android:title="@string/liked_posts"
        android:icon="@drawable/ic_heart_filled"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_saved_posts"
        android:title="@string/saved_posts"
        android:icon="@drawable/bookmarks"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_logout_white"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/account"
        android:title="@string/delete_account"

        android:icon="@drawable/ic_action_name"
        app:showAsAction="ifRoom"/>








</menu>
